Minor adjustement to avoid line wrap in legend

--- a/phl/css/style.css
+++ b/phl/css/style.css
@@ -597,7 +597,7 @@ svg {
 .control.selector i {
   font-size: 14px;
   margin-left: 3px;
-  margin-right: 5px;
+  margin-right: 3px;
 }
 
 .control.selector input,
